Switch to SQLite + Reworking parts

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,3 @@
-MYSQL_HOST=mysql_host_here
-MYSQL_USER=mysql_user_here
-MYSQL_PASSWORD=mysql_pass_here
-MYSQL_DB=mysql_db_here
+SQLITE_DB="/opt/discord-notification-queue/discord-queue.db"
 
 FLASK_ENV=Production
